--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "cisco-cloudshark",
-  "version": "1.0.1",
+  "name": "cloudshark",
+  "version": "1.0.2",
   "description": "Script to upload packet captures to Cloudshark Personal",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/tests.js"
   },
   "keywords": [
-    "cisco",
     "cloudshark",
-    "dime",
-    "cisco-dime"
+    "fetch",
+    "packet",
+    "capture"
   ],
   "author": "Jeremy Worden",
   "license": "MIT",
-  "dependencies": {
-    "cisco-dime": "^1.7.4",
-    "form-data": "^4.0.0",
-    "fs-extra": "^10.1.0"
-  }
+  "dependencies": {}
 }
